Fixed broken share icon on firefox

--- a/styles/designs.css
+++ b/styles/designs.css
@@ -97,6 +97,7 @@ body::-webkit-scrollbar {
   margin-bottom: 3rem;
   padding: 0.3rem;
   cursor: pointer;
+  min-width: 2.3rem;
 }
 
 .share-icon img {
